
(RB=1020864)
Data translator changes for supporting Pegasus union with aliases.

(RB=1022062)
Remove 'type' based methods in UnionDataSchema and cleanup pegasus codebase that uses those methods.

(RB=993931)
Support custom content-types/DataCodecs in Rest.Li. This change also adds customizable codec support for multiplexed requests.

11.1.1
-------
(RB=1031514)
Capture collection custom metadata type for GET_ALL in IDL and expose that in FilterRequestContext.

(RB=1019396)
Adding gracefulShutdownTimeout and tcpNoDelay to D2TransportClientProperties.pdsc

(RB=1026302)
Refactoring HttpNettyClients to use AbstractNettyClient for the common parts

(RB=1017823)
Adding idleTimeoutSsl's HttpClientFactory support

(RB=996078)
Capture the @Deprecated trait of finder and action parameters in IDL.

11.1.0
-------
(RB=998716)
Added backup requests.

11.0.18
-------
(RB=1024125)
Added sslIdleTimeout to PropertyKeys and TransportClientPropertiesConverter

Update pegasus version to newly released 11.0.17 for opensource quickstart project.

11.0.17
-------
(RB=1017503)
Added sslIdleTimeout to the d2-schemas

(RB=1005627)
Added D2 State WarmUp feature

(RB=1015159)
Fix pegasus plugin configuration to include the jdk tools jar.

11.0.16
-------
(RB=1019823)
Expose collection metadata projection mask in FilterRequestContext.

11.0.15
-------

11.0.14
-------

11.0.13
-------
(RB=1008758)
Typo in the test file : test-util/src/main/java/com/linkedin/test/util/GaussianRandom.java

(RB=1002213)
generateRestModel doesn't need a copy of the codegen classpath

(RB=1010209)
Changes to handle Restli info chatty output

11.0.12
-------

11.0.11
-------
(RB=1008894)
HttpClientFactory.Builder, added documentation and improved to handle more easily more cases

11.0.10
-------
(RB=1008069)
Make tcpNoDelay constructor's change backward compatible in HttpClientFactory

(RB=1001008)
Make check tasks incremental

(RB=1001187)